--- a/Tool-Data-Inventory-Manager/Features/AuthenticationService/Views/LoginWindow.xaml
+++ b/Tool-Data-Inventory-Manager/Features/AuthenticationService/Views/LoginWindow.xaml
@@ -75,14 +75,16 @@
             Margin="0,10,0,10"
             HorizontalAlignment="Center">
 
-               <TextBlock Text="Forgot password?" 
+               <TextBlock Text="Forgot password?"
+               Style="{StaticResource textBlockWithHover}"
                HorizontalAlignment="Center"
                x:Name="tb_forgotPassword"
                Cursor="Hand"
                Margin="0 5 0 5"
                MouseLeftButtonDown="tb_forgotPassword_MouseLeftButtonDown"/>
 
-               <TextBlock Text="I don't have an account yet." 
+               <TextBlock Text="I don't have an account yet."
+               Style="{StaticResource textBlockWithHover}"
                HorizontalAlignment="Center"
                x:Name="tb_notMember"
                Cursor="Hand"
