--- a/Tool-Data-Inventory-Manager/Features/AuthenticationService/Views/RegisterWindow.xaml
+++ b/Tool-Data-Inventory-Manager/Features/AuthenticationService/Views/RegisterWindow.xaml
@@ -115,6 +115,7 @@
                         Margin="0,10,0,10"
                         HorizontalAlignment="Center">
                 <TextBlock Text="Már van fiókom"
+                           Style="{StaticResource textBlockWithHover}"
                            x:Name="tb_alreadyHaveAccount"
                            MouseLeftButtonDown="tb_alreadyHaveAccount_MouseLeftButtonDown"
                            HorizontalAlignment="Center"
