--- a/Tool-Data-Inventory-Manager/Features/InventoryManager/Views/WorkspaceWindow.xaml
+++ b/Tool-Data-Inventory-Manager/Features/InventoryManager/Views/WorkspaceWindow.xaml
@@ -27,20 +27,27 @@
             <TabItem Header="Tools">
                 <ScrollViewer VerticalScrollBarVisibility="Auto">
                     <StackPanel Margin="10">
-                        <StackPanel Orientation="Horizontal" Margin="0,5">
-                            <Label Content="Tool keresés:" VerticalAlignment="Center"/>
-                            <ComboBox x:Name="ToolFilterField" Width="120" Margin="5,0">
-                                <ComboBoxItem Content="Name" IsSelected="True"/>
-                                <ComboBoxItem Content="MaterialNumber"/>
-                                <ComboBoxItem Content="MagPlace"/>
-                                <ComboBoxItem Content="Price"/>
-                            </ComboBox>
-                            <TextBox x:Name="ToolSearchBox" Width="200" Margin="5,0" TextChanged="ToolSearchBox_TextChanged"/>
-                        </StackPanel>
+                        <GroupBox Header="Tool keresése">
+                            <StackPanel Orientation="Horizontal" Margin="0,5">
+                                <Label Content="Tool keresés:" VerticalAlignment="Center"/>
+                                <ComboBox x:Name="ToolFilterField" Width="120" Margin="5,0">
+                                    <ComboBoxItem Content="Name" IsSelected="True"/>
+                                    <ComboBoxItem Content="MaterialNumber"/>
+                                    <ComboBoxItem Content="MagPlace"/>
+                                    <ComboBoxItem Content="Price"/>
+                                </ComboBox>
+                                <TextBox x:Name="ToolSearchBox" Width="200" Margin="5,0" TextChanged="ToolSearchBox_TextChanged"/>
+                            </StackPanel>
+                        </GroupBox>
                         <Button Content="Új Tool hozzáadása" Click="AddTool_Click" Margin="5" Width="138" Height="30"/>
                         <GroupBox Header="Tool lista" Margin="0 0 0 20">
-                            <DataGrid x:Name="ToolDataGrid" AutoGenerateColumns="True" IsReadOnly="True" Height="200" Margin="5"
-                                      MouseDoubleClick="ToolDataGrid_MouseDoubleClick" SelectionMode="Single"/>
+                            <DataGrid x:Name="ToolDataGrid" 
+                                      AutoGenerateColumns="True" 
+                                      IsReadOnly="True" 
+                                      Height="400" 
+                                      Margin="5"
+                                      MouseDoubleClick="ToolDataGrid_MouseDoubleClick" 
+                                      SelectionMode="Single"/>
                         </GroupBox>
                         <Button Content="Kijelölt szerszám törlése" Margin="5" Click="DeleteTool_Click" Height="30" Width="170"/>
                     </StackPanel>
@@ -67,8 +74,13 @@
                         </GroupBox>
 
                         <GroupBox Header="Product lista">
-                            <DataGrid x:Name="ProductDataGrid" AutoGenerateColumns="False" IsReadOnly="True" Height="200" Margin="5"
-                                      MouseDoubleClick="ProductDataGrid_MouseDoubleClick" SelectionMode="Single">
+                            <DataGrid x:Name="ProductDataGrid"
+                                      AutoGenerateColumns="False" 
+                                      IsReadOnly="True" 
+                                      Height="400" 
+                                      Margin="5"
+                                      MouseDoubleClick="ProductDataGrid_MouseDoubleClick" 
+                                      SelectionMode="Single">
                                 <DataGrid.Columns>
                                     <DataGridTextColumn Header="ProductNumber" Binding="{Binding ProductNumber}" />
                                     <DataGridTextColumn Header="Type" Binding="{Binding Type}" />
@@ -106,8 +118,12 @@
                         </GroupBox>
 
                         <GroupBox Header="Gépek" Margin="0 10 0 10">
-                            <DataGrid x:Name="MachineDataGrid" AutoGenerateColumns="False" IsReadOnly="True"
-                                      SelectionMode="Single" MouseDoubleClick="MachineDataGrid_MouseDoubleClick">
+                            <DataGrid x:Name="MachineDataGrid"
+                                      AutoGenerateColumns="False" 
+                                      IsReadOnly="True"
+                                      Height="400"
+                                      SelectionMode="Single" 
+                                      MouseDoubleClick="MachineDataGrid_MouseDoubleClick">
                                 <DataGrid.Columns>
                                     <DataGridTextColumn Header="ID" Binding="{Binding Id}" Width="Auto"/>
                                     <DataGridTextColumn Header="Név" Binding="{Binding Name}" Width="*"/>
