--- a/Tool-Data-Inventory-Manager/Features/InventoryManager/Views/AddMachineWindow.xaml
+++ b/Tool-Data-Inventory-Manager/Features/InventoryManager/Views/AddMachineWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="Tool_Data_Inventory_Manager.Features.InventoryManager.Views.AddMachineWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Új gép hozzáadása" Height="300" Width="400" WindowStartupLocation="CenterScreen">
+        Title="Új gép hozzáadása" Height="400" Width="400" WindowStartupLocation="CenterScreen">
     <Grid Margin="10">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -18,8 +18,8 @@
         </StackPanel>
 
         <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right" Margin="0 10 0 0">
-            <Button Content="Mentés" Click="SaveButton_Click" Width="80" Margin="0 0 10 0"/>
-            <Button Content="Mégse" Click="CancelButton_Click" Width="80"/>
+            <Button Content="Mentés" Click="SaveButton_Click" Width="80" Margin="0 0 10 0" Height="30"/>
+            <Button Content="Mégse" Click="CancelButton_Click" Width="80" Height="30"/>
         </StackPanel>
     </Grid>
 </Window>
