--- a/Tool-Data-Inventory-Manager/Features/InventoryManager/Views/ToolCreateWindow.xaml
+++ b/Tool-Data-Inventory-Manager/Features/InventoryManager/Views/ToolCreateWindow.xaml
@@ -1,8 +1,12 @@
 ﻿<Window x:Class="Tool_Data_Inventory_Manager.Features.InventoryManager.Views.ToolCreateWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Új Tool hozzáadása" Height="450" Width="400" WindowStartupLocation="CenterScreen">
+        Title="Új Tool hozzáadása" Height="400" Width="400" WindowStartupLocation="CenterScreen">
     <Grid Margin="10">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="2*" />
+            <ColumnDefinition Width="3*" />
+        </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
@@ -12,20 +16,20 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <Label Content="Név:" Grid.Row="0"/>
-        <TextBox x:Name="NameTextBox" Grid.Row="0" Margin="80,0,0,5"/>
+        <Label Content="Név:" Grid.Row="0" Grid.Column="0" VerticalAlignment="Center" Margin="0,0,5,5"/>
+        <TextBox x:Name="NameTextBox" Grid.Row="0" Grid.Column="1" Margin="0,0,0,5"/>
 
-        <Label Content="Material Number:" Grid.Row="1"/>
-        <TextBox x:Name="MaterialNumberTextBox" Grid.Row="1" Margin="80,0,0,5"/>
+        <Label Content="Material Number:" Grid.Row="1" Grid.Column="0" VerticalAlignment="Center" Margin="0,0,5,5"/>
+        <TextBox x:Name="MaterialNumberTextBox" Grid.Row="1" Grid.Column="1" Margin="0,0,0,5"/>
 
-        <Label Content="Mag Place (opcionális):" Grid.Row="2"/>
-        <TextBox x:Name="MagPlaceTextBox" Grid.Row="2" Margin="80,0,0,5"/>
+        <Label Content="Mag Place (opcionális):" Grid.Row="2" Grid.Column="0" VerticalAlignment="Center" Margin="0,0,5,5"/>
+        <TextBox x:Name="MagPlaceTextBox" Grid.Row="2" Grid.Column="1" Margin="0,0,0,5"/>
 
-        <Label Content="Ár (€):" Grid.Row="3"/>
-        <TextBox x:Name="PriceTextBox" Grid.Row="3" Margin="80,0,0,5"/>
+        <Label Content="Ár (€):" Grid.Row="3" Grid.Column="0" VerticalAlignment="Center" Margin="0,0,5,0"/>
+        <TextBox x:Name="PriceTextBox" Grid.Row="3" Grid.Column="1"/>
 
         <!-- Új: Kategória Checkboxok -->
-        <GroupBox Header="Kategóriák" Grid.Row="4" Margin="0,10,0,0">
+        <GroupBox Header="Kategóriák" Grid.Row="4" Margin="0,10,0,0" Grid.ColumnSpan="2">
             <WrapPanel Margin="10" VerticalAlignment="Top">
                 <CheckBox Content="Nagyolómaró" x:Name="CheckNagyolomaro" Margin="5"/>
                 <CheckBox Content="Sorjázómaró" x:Name="CheckSorjazomaro" Margin="5"/>
@@ -39,9 +43,9 @@
         </GroupBox>
 
         <!-- Gombok -->
-        <StackPanel Grid.Row="5" Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,10,0,0">
-            <Button Content="Mentés" Width="80" Click="Save_Click" Margin="5" Height="33"/>
-            <Button Content="Mégse" Width="80" Click="Cancel_Click" Margin="5" Height="43"/>
+        <StackPanel Grid.Row="5" Grid.ColumnSpan="2"  Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,10,0,0">
+            <Button Content="Mentés" Width="80" Click="Save_Click" Margin="5" Height="30"/>
+            <Button Content="Mégse" Width="80" Click="Cancel_Click" Margin="5" Height="30"/>
         </StackPanel>
     </Grid>
 </Window>
