--- a/Tool-Data-Inventory-Manager/Features/InventoryManager/Views/ToolEditorWindow.xaml
+++ b/Tool-Data-Inventory-Manager/Features/InventoryManager/Views/ToolEditorWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="Tool_Data_Inventory_Manager.Features.InventoryManager.Views.ToolEditorWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Tool szerkesztése" Height="450" Width="400" WindowStartupLocation="CenterScreen">
+        Title="Tool szerkesztése" Height="400" Width="400" WindowStartupLocation="CenterScreen">
     <Grid Margin="10">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -39,8 +39,8 @@
         </GroupBox>
 
         <StackPanel Grid.Row="5" Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,10,0,0">
-            <Button Content="Mentés" Width="80" Click="Save_Click" Margin="5"/>
-            <Button Content="Mégse" Width="80" Click="Cancel_Click" Margin="5"/>
+            <Button Content="Mentés" Width="80" Click="Save_Click" Margin="5" Height="30"/>
+            <Button Content="Mégse" Width="80" Click="Cancel_Click" Margin="5" Height="30"/>
         </StackPanel>
     </Grid>
 </Window>
