--- a/Tool-Data-Inventory-Manager/Features/InventoryManager/Views/WorkspaceWindow.xaml
+++ b/Tool-Data-Inventory-Manager/Features/InventoryManager/Views/WorkspaceWindow.xaml
@@ -150,11 +150,13 @@
                         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0 10 0 0">
                             <Button Content="Gép törlése" Click="DeleteMachineButton_Click" Width="130" Height="30"/>
                         </StackPanel>
-                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,10,0,0">
-                            <Button x:Name="btn_export" Content="Export" Click="btn_export_Click" Width="120" Height="30"/>
-                        </StackPanel>
                     </StackPanel>
                 </ScrollViewer>
+            </TabItem>
+            <TabItem Header="Export">
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="0,10,0,0">
+                    <Button x:Name="btn_export" Content="Export" Click="btn_export_Click" Width="120" Height="30"/>
+                </StackPanel>
             </TabItem>
         </TabControl>
     </Grid>
