feat: moving authentication windows doesn't work

--- a/Tool-Data-Inventory-Manager/Features/AuthenticationService/Views/ForgotPasswordWindow.xaml
+++ b/Tool-Data-Inventory-Manager/Features/AuthenticationService/Views/ForgotPasswordWindow.xaml
@@ -11,7 +11,7 @@
         WindowStartupLocation="CenterScreen"
         Style="{StaticResource RoundedWindowStyle}">
 
-    <Border Style="{StaticResource RoundedWindowBorderStyle}">
+    <Border Style="{StaticResource RoundedWindowBorderStyle}" MouseLeftButtonDown="Border_MouseLeftButtonDown">
         <StackPanel Style="{StaticResource WrapperStackPanel}" Height="380" Width="630">
 
             <!-- Close Button (jobb felső sarokban, ha van ilyen stílus) -->
