--- a/Tool-Data-Inventory-Manager/Features/AuthenticationService/Views/ResetPasswordWindow.xaml
+++ b/Tool-Data-Inventory-Manager/Features/AuthenticationService/Views/ResetPasswordWindow.xaml
@@ -10,7 +10,7 @@
         WindowStartupLocation="CenterScreen"
         Style="{StaticResource RoundedWindowStyle}">
 
-    <Border Style="{StaticResource RoundedWindowBorderStyle}">
+    <Border Style="{StaticResource RoundedWindowBorderStyle}" MouseLeftButtonDown="Border_MouseLeftButtonDown">
         <StackPanel Style="{StaticResource WrapperStackPanel}" Width="630" Height="380">
 
             <!-- Bezárás gomb -->
