--- a/Tool-Data-Inventory-Manager/Features/AuthenticationService/Views/LoginWindow.xaml
+++ b/Tool-Data-Inventory-Manager/Features/AuthenticationService/Views/LoginWindow.xaml
@@ -10,7 +10,7 @@
         Height="400" Width="650"
         WindowStartupLocation="CenterScreen"
         Style="{StaticResource RoundedWindowStyle}">
-    <Border Style="{StaticResource RoundedWindowBorderStyle}">
+    <Border Style="{StaticResource RoundedWindowBorderStyle}" MouseLeftButtonDown="Border_MouseLeftButtonDown">
         <StackPanel Style="{StaticResource WrapperStackPanel}" Width="630" Height="380">
             <Button Style="{StaticResource CloseButtonStyle}"
                     x:Name="btn_Close"
